@@ -1,3 +1,8 @@
+SimpleComplex/Validate 1.x, 2017-08-20
+--------------------------------------
+- ValidationRuleSet constructor shan't have any required parameters,
+  to allow Utils::cast()'ing to it.
+
 SimpleComplex/Validate 1.x, 2017-08-10
 --------------------------------------
 - ValidateAgainstRuleSet::getInstance() must refer and return by rule provider
